# sample-agentic-ai-foundation

./: .gitignore  README.md  agentcore_runtime_deployment.ipynb  chat_to_agentcore.ipynb  offline_evaluation.py  response_quality_evaluator.py  simple_evaluation.py
.github/workflows/: agent-evaluation.yml
cx-agent-backend/: Dockerfile  pyproject.toml  test_gateway.py
cx-agent-backend/cx_agent_backend/: __init__.py  server.py
cx-agent-backend/cx_agent_backend/domain/entities/: conversation.py
cx-agent-backend/cx_agent_backend/domain/services/: agent_service.py  conversation_service.py
cx-agent-backend/cx_agent_backend/infrastructure/adapters/: langgraph_agent_service.py  memory_conversation_repository.py  openai_llm_service.py  sql_alchemy_conversation_service.py  tools.py
cx-agent-backend/cx_agent_backend/infrastructure/aws/: parameter_store_reader.py  secret_reader.py
cx-agent-backend/cx_agent_backend/infrastructure/config/: container.py  settings.py
cx-agent-backend/cx_agent_backend/presentation/api/: conversation_router.py
cx-agent-backend/cx_agent_backend/presentation/schemas/: conversation_schemas.py
cx-agent-backend/infra/: main.tf  outputs.tf  variables.tf
cx-agent-backend/src/: main.py  run.py
cx-agent-backend/src/domain/repositories/: conversation_repository.py
cx-agent-backend/src/domain/services/: agent_service.py  conversation_service.py  guardrail_service.py  llm_service.py
cx-agent-backend/src/infrastructure/adapters/: bedrock_guardrail_service.py  langgraph_agent_service.py  memory_conversation_repository.py  openai_llm_service.py  sql_alchemy_conversation_service.py  tools.py
cx-agent-backend/src/infrastructure/aws/: parameter_store_reader.py  secret_reader.py
cx-agent-backend/src/infrastructure/config/: container.py  settings.py
cx-agent-backend/src/presentation/api/: conversation_router.py
cx-agent-backend/src/presentation/schemas/: conversation_schemas.py
cx-agent-frontend/: Dockerfile  pyproject.toml
cx-agent-frontend/src/: app.py
cx-agent-frontend/src/components/: chat.py  config.py
cx-agent-frontend/src/services/: agentcore_client.py  (+1 more)
infra/: README.md  main.tf  outputs.tf  terraform.tf  terraform.tfvars.example  variables.tf
(+14 files in other folders)
